PMM-3236 Update API.
